// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar should apply prefixCls from ConfigProvider 1`] = `
<div>
  <div
    class="config-prefix-calendar-picker"
  />
</div>
`;

exports[`Calendar should prioritize component prefixCls over ConfigProvider 1`] = `
<div>
  <div
    class="component-prefix"
  />
</div>
`;

exports[`Calendar single mode 1`] = `
<div>
  <div
    class="adm-calendar-picker"
  />
</div>
`;
